--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -82,14 +82,18 @@
 
 
 <article id="home">	
-	<h2>Hello internet!</h2>
-	<p>I do some quite shitty <a href="wood">woodworking</a> and pretty decent <a href="speaking">keynotes.</a></p>
-	<p>In my spare time I don&rsquo;t have any.</p>
+	<h2>G&rsquo;day internet!</h2>
+	
+	<div class="introface">
+			<img src="design/images/bio/will-dayble-dp.jpg" alt="will-dayble-dp" width="800" height="800">
+			<p>My name is Will Dayble, and I do some quite shitty <a href="wood">woodworking</a> and pretty decent <a href="speaking">keynotes.</a></p>
+			<p>Welcome to my interwobble site.</p>
+	</div>
 	<nav>
-	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>	
-	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="speaking">Speaking noises <i class="ss-right"></i></a></p>	
+	  <p><a data-nav class="btn" href="work">Workin hard <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="love">Testimonials <i class="ss-right"></i></a></p>	  
-	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="contact">Contact me <i class="ss-right"></i></a></p>
 	</nav>
 
 </article>
