--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -107,6 +107,7 @@
 
 
 <article id="speaker-themes">
+<!--	<a data-nav class="btn btn-home" href="/"><i class="ss-home"></i></a> -->
 	<a data-nav class="btn btn-back" href="#speaking"><i class="ss-left"></i> Speaking</a>
 	<a data-nav class="btn btn-next" href="#speaker-bio"><i class="ss-right"></i> Speaker Bio</a>
 	
@@ -137,6 +138,7 @@
 </article>				
 
 <article id="speaker-bio">
+<!--	<a data-nav class="btn btn-home" href="/"><i class="ss-home"></i></a> -->	
 	<a data-nav class="btn btn-back" href="#speaker-themes"><i class="ss-left"></i> Themes</a>
 	<a data-nav class="btn btn-next" href="#speaker-rider"><i class="ss-right"></i> Speaker Rider</a>
 
@@ -223,6 +225,7 @@
 
  
 <article id="speaker-rider">
+<!--	<a data-nav class="btn btn-home" href="/"><i class="ss-home"></i></a> -->	
 	<a data-nav class="btn btn-back" href="#speaker-bio"><i class="ss-left"></i> Speaker bio</a>
 	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Get in touch</a>
 
@@ -262,6 +265,7 @@
 
 
 	<h2>Book me</h2>	
+<!--	<a data-nav class="btn btn-home" href="/"><i class="ss-home"></i></a> -->
 	<p><a data-nav class="btn" href="contact">Get in touch <i class="ss-right"></i></a></p>
 
 </article>
