minor text updates

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -85,7 +85,7 @@
 	<h2>G&rsquo;day internet!</h2>
 	
 	<div class="introface">
-			<img src="design/images/bio/will-dayble-dp.jpg" alt="will-dayble-dp" width="800" height="800">
+			<a href="speaking"><img src="design/images/bio/will-dayble-dp.jpg" alt="will-dayble-dp" width="800" height="800"></a>
 			<p>My name is Will Dayble, and I do some quite shitty <a href="wood">woodworking</a> and pretty decent <a href="speaking">keynotes.</a></p>
 			<p>Welcome to my interwobble site.</p>
 	</div>
