--- a/htdocs/love.html
+++ b/htdocs/love.html
@@ -77,10 +77,9 @@
 	<a data-nav class="btn btn-back" href="/#"><i class="ss-left"></i> Home</a>
 	<a data-nav class="btn btn-next" href="speaking"><i class="ss-right"></i> Speaking</a>
 
-	<h2>Testimonials.</h2>
-	<h4>Testimonials are <em>mega awkward.</em></h4>
-	<p>It&rsquo;s straight up asking people to say nice stuff about you in public. Weeeeird.</p>
-	<p>Here&rsquo;s a few. More <a href="https://www.linkedin.com/in/willdayble" target="_blank">on LinkedIn</a> if you&rsquo;re feeling stalky.</p>
+	<h2>Love &amp; attention.</h2>
+	<h4>Hot damn, testimonials are <em>awkward</em>.</h4>
+	<p>More <a href="https://www.linkedin.com/in/willdayble" target="_blank">on LinkedIn</a> if you&rsquo;re feeling stalky.</p>
 </article>
 
 
