--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -79,8 +79,8 @@
 
 	<h2>Blah blah.</h2>
 	<p>I fly around the world and make flappy noises with my lips to motivate large crowds of people, which is a very odd thing to do if you think about it.</p>
-	<p>I&rsquo;m usually booked when a no-flowery-bullshit approach is required to helping people take action on the stuff that matters.</p> 
-	<p>For bookings, get <a href="contact">in touch.</a></p>
+	<p>I&rsquo;m booked when a no-bullshit approach is needed to help folks take action.</p> 
+
 	<nav>
 	  <p><a data-nav class="btn" href="#speaker-themes">Popular Themes <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#speaker-bio">Biography <i class="ss-right"></i></a></p>
@@ -165,17 +165,6 @@
 	<p>He lives in Carlton, Melbourne, with a neuroscientist and two cats, all three dearly beloved.</p>
 	<p>In his spare time, Will doesn't have any.</p>
 
-
-<!--
-	<p>Will made his first dollar selling stolen lemons at age 6. His father tried to teach him code a year later. He's since founded multiple companies in digital, education and social enterprise. He delivers keynotes to big companies and starts small ones. In his spare time he doesn't have any.</p>
-	
-	<h3>Longer</h3>
-	<p>Will made his first dollar selling stolen lemons at age 6. His father taught him to code a year later. He's since founded multiple companies in digital, education and social enterprise.</p>
-	<p>He&rsquo;s founded a <a href="http://squareweave.com.au/" target="_blank">digital agency</a>, an <a href="http://cowalition.com/" target="_blank">NGO</a> that helps small plot Cambodian farmers out of poverty, and an <a href="https://fitzroyacademy.com/" target="_blank">online education platform</a> for social impact people. 
-	<p>Speaking across the world, from auditorium-filling keynotes to intimate masterclasses and executive roundtables, Will helps tiny and huge organisations to take action on the difficult stuff.</p>
-	<p>He sits on the boards of a few Aussie businesses and mentors numerous folks in local and international startup communities.</p>
-	<p>In his spare time, Will doesn’t have any.</p>		
--->
 	<hr id="pics">
 	<h3>Hi-res pictures</h3>
 	<p>Click to open hi-res copies in a new window.</p>
@@ -239,6 +228,7 @@
 	<p>See <a href="http://speakerdiversity.com" target="_blank">speakerdiversity.com</a> for more on this.</p>
 
 	<h3>Audio visual</h3>
+	<p><strong>It&rsquo;s 2017, people:</strong> Ensure direct HDMI (no RGB) is available.</p>
 	<p>I use my own laptop and clicker. If I must use your presentation tech, please ensure we are using an up to date version of Keynote, with a quality clicker ahead of time.</p>
 	<p>I do not usually require sound output. I will let you know ahead of time if I do.</p>
 	<p>My laptop - or the speaker monitor - should be positioned to the side of the stage, within easy view of the most distant place I will be standing on the stage. I move around a lot.</p>
