oh god i hate this speaker wankery bullshit flowery language why cant people just be nice and do things

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -72,29 +72,27 @@
 
 
 <aside>
+<!--
 	<p>
 		<a href="mailto:will@willdayble.com"><i class="ss-mail"></i></a>
 		<a href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i></a>
 		<a href="//linkedin.com/in/willdayble"><i class="ss-social-regular ss-linkedin"></i></a>
 	</p>
+-->
 </aside>
 
 
 
 <article id="home">	
-	<h2>G&rsquo;day internet!</h2>
-	
-	<div class="introface">
-			<a href="speaking"><img src="design/images/bio/will-dayble-dp.jpg" alt="will-dayble-dp" width="800" height="800"></a>
-			<p>My name is Will Dayble, and I do some quite shitty <a href="wood">woodworking</a> and pretty decent <a href="speaking">keynotes.</a></p>
-			<p>Welcome to my interwobble site.</p>
-	</div>
+	<h2>Will Dayble.</h2>
+	<h3>Award winning lecturer, <br><a href="speaking">speaker</a>, &amp; <a href="work">startup founder.</a></h3>
+	<p>&nbsp;</p>
 	<nav>
-	  <p><a data-nav class="btn" href="speaking">Speaking noises <i class="ss-right"></i></a></p>	
-	  <p><a data-nav class="btn" href="work">Workin hard <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>	
+	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="love">Testimonials <i class="ss-right"></i></a></p>	  
 	  <p><a data-nav class="btn" href="contact">Contact me <i class="ss-right"></i></a></p>
-	</nav>
+	</nav>	
 
 </article>
 
