--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -70,22 +70,22 @@
 <![endif]-->
 
 
-<aside class="wanker"></aside>
+<aside class="smirk"></aside>
 
 
 <article id="speaking">
 	<a data-nav class="btn btn-back" href="/#"><i class="ss-left"></i> Home</a>
 	<a data-nav class="btn btn-next" href="#speaker-bio"><i class="ss-right"></i> Speaker Bio</a>
 
-	<h2>Blah blah.</h2>
-	<p>I fly around the world and make flappy noises with my lips to motivate large crowds of people, which is a very odd thing to do if you think about it.</p>
-	<p>I&rsquo;m booked when a no-bullshit approach is needed to help folks take action.</p> 
+	<h2>Keynotes, grace notes.</h2>
+
+	<p>From lecture theatre to auditoriums, I speak on innovation, technology and social impact to help audiences make big decisions about the hard stuff.</p>
+
 
 	<nav>
-	  <p><a data-nav class="btn" href="#speaker-themes">Popular Themes <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="#speaker-themes">Themes <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#speaker-bio">Biography <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#pics">Pictures <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="#love">Testimonials <i class="ss-right"></i></a></p>	  
 	  <p><a data-nav class="btn" href="#speaker-rider">Rider / AV / etc. <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="contact">Bookings <i class="ss-right"></i></a></p>
 	</nav> 	
@@ -111,10 +111,11 @@
 	<a data-nav class="btn btn-back" href="#speaking"><i class="ss-left"></i> Speaking</a>
 	<a data-nav class="btn btn-next" href="#speaker-bio"><i class="ss-right"></i> Speaker Bio</a>
 	
-	<h3>Themes</h3>
-	<p>I am almost always booked for <em>&lsquo;provocations.&rsquo;</em></p>
-	<p>That apparently means I wave my arms around and get everyone worked up.</p>
-	<h4>Common themes:</h4>
+	<h3>Themes.</h3>
+	<p>I am almost always booked for <em>provocations.</em></p>
+	<p>Whether to an audience of thousands or at an intimate off-site, I&rsquo;m the molotov that helps people to sit up, take notice, and create action.</p>
+	<p>No keynote is the same, I&rsquo;d recommend speaking with me directly about what you want to achieve - we can design something brilliant together.</p>	
+	<h4>Common topics:</h4>
 	<dl>
 		<dt>1</dt><dd>Technology will eat everything: Where tech is taking us and what this means for normal people who don't own the robots;</dd>
 		<dt>2</dt><dd>Disruption / transformation: What the buzzwords <em>actually</em> mean, when to be scared, and what it means for leadership;</dd>
@@ -123,7 +124,7 @@
 		<dt>5</dt><dd>Innovation &amp; Culture: Why are some companies innovative and some not? The artefacts, rituals and behaviours of innovation;</dd>
 		<dt>6</dt><dd>Impact: Doing good while doing well, within a business context, in a way that creates measurable social impact;</dd>		
 	</dl>
-	<p>No keynote is the same, I&rsquo;d recommend talking to me about what you want to achieve - we can design something brilliant together.</p>
+
 </article> 
 
 <article class="alt">
@@ -149,20 +150,18 @@
 	<p>In his spare time he doesn't have any.</p>
 
 	<h3>Longer version:</h3>
-	<p>Will made his first dollar selling stolen lemons at age 6. The margins were incredible. His father taught him to code a year later.</p>
-	<p>Will wanted to be a social worker, but didn't get the grades, and came very close to failing high school entirely. Instead, he had a short-lived professional career as an actor and a grossly unprofessional career in a metal band.</p>
-	<p>He also formed a close relationship with his grandfather, as mentor and teacher.</p>
+	<p>Will made his first dollar selling stolen lemons at age 6. The margins were incredible.</p>
 
-	<p>Will's first successful exit was at 19 years old, from a London-based IT training organisation. The resulting funds were used to start a mental health charity helping young people in the Melbourne punk scene, a web development company and a record label.</p>
+
+	<p>Will's first successful exit was at 19 years old, from a small IT training organisation. The resulting funds were used to start a mental health charity helping young people in the Melbourne punk scene, a web development company and a record label.</p>
 	<p>All of these ventures eventually failed.</p>
-	<p>Later, a series of mishaps resulted in Will founding one of Melbourne's <a href="http://squareweave.com.au/" target="_blank">leading digital agencies</a>, a <a href="http://gracefitzroy.com/">cafe</a>, and an online <a href="https://fitzroyacademy.com/" target="_blank">social impact school</a>, all of which seem to be working quite well.</p>
+	<p>Later, Will founded one of Melbourne's <a href="http://squareweave.com.au/" target="_blank">leading digital agencies</a>, a <a href="http://gracefitzroy.com/">cafe</a>, and an online <a href="https://fitzroyacademy.com/" target="_blank">social impact school</a>, all of which seem to be working quite well.</p>
 	<p>Unprofessionally speaking, he's crowdfunded an international DJ tour, built a <a href="http://speakerdiversity.com/" target="_blank">speaker diversity initiative</a>, a charity evaluation startup, worked with <a href="https://torrentfreak.com/pirate-bay-launches-dedicated-promo-bay-to-help-artists-121129/" target="_blank">internet criminals</a> and filled a warehouse loft with nearly 10,000 balloons.</p>
-	<p>Despite a complete lack of qualifications, he's written and lectured courses in digital and social entrepreneurship at two Australian universities.</p>
+	<p>Despite a complete lack of qualifications, he's an award winning lecturer, building courses on digital and entrepreneurship at two Australian universities.</p>
 	<p>As, investor advisor and occasional chair, Will sits on the board of a <a href="http://willdayble.com/work">handful</a> of Australian businesses.</p>
-	<p>According to the Head of Technology at Culture Amp, "Practically all situations benefit from Will's involvement."</p>	
-	<p>At 32 (citrus crimes forgotten) he's a mostly functional member of society and is paid to fly around the world making flappy noises with his lips to motivate large groups of people, which is a very strange thing to do if you think about it.</p>
-	<p>His teachers were proven correct; Will has consistently failed to get a real job.</p>
-	<p>He lives in Carlton, Melbourne, with a neuroscientist and two cats, all three dearly beloved.</p>
+
+	<p>Now, Will flies around the world making flappy noises with his lips to motivate large groups of people, which is a very strange thing to do if you think about it.</p>
+	<p>He is based in Melbourne, with a neuroscientist and two cats.</p>
 	<p>In his spare time, Will doesn't have any.</p>
 
 	<hr id="pics">
@@ -181,24 +180,12 @@
 			<img class="" src="design/images/bio/will-dayble.jpg" alt="will-dayble">
 			<i class="ss-windows"></i>
 		</a>
-		<a class="biopic" target="_blank" href="design/images/bio/will-dayble-headshot.jpg">
-			<img class="" src="design/images/bio/will-dayble-headshot.jpg" alt="will-dayble">
-			<i class="ss-windows"></i>
-		</a>
 		<a class="biopic" target="_blank" href="design/images/bio/will-dayble-by-mark-lobo.jpg">
 			<img class="" src="design/images/bio/will-dayble-by-mark-lobo.jpg" alt="will-dayble">
 			<i class="ss-windows"></i>
 		</a>
-		<p>Photo credits: <a target="_blank" href="https://www.instagram.com/leo_flander/">Leo Flander</a> (1 & 2), Will Coverdale (3 & 4) and <a href="http://www.marklobo.com.au/" target="_blank">Mark Lobo</a> (5).</p>
+		<p>Photo credits: <a target="_blank" href="https://www.instagram.com/leo_flander/">Leo Flander</a> (1 & 2), Will Coverdale (3) and <a href="http://www.marklobo.com.au/" target="_blank">Mark Lobo</a> (4).</p>
 	</p>
-	
-	<hr id="love">
-	<h3>Testimonials</h3>
-	<p>Testimonials are weird because you&rsquo;re straight up asking good people to say nice stuff about you in public.</p>
-	<nav>
-	  <p><a data-nav class="btn" href="love">Here&rsquo;s a whole page of them. <i class="ss-right"></i></a></p>	  
-	</nav>
-
 	
 </article>	
 
