--- a/htdocs/wood.html
+++ b/htdocs/wood.html
@@ -79,13 +79,10 @@
 
 		<h2>Got wood?</h2>
 
-		<h3>I am slowly renovating my house. </h3>
-		<p>It&rsquo;s in Melbourne, and I want to use recycled and / or reclaimed material, because of the ENVIRONMENT and stuff.</p>
-		<p>If you can give me your wood, I will gladly take it all.</p>
-		<p>I&rsquo;ll even give you pictures of what I do with it.</p>
-		<p>I can pick stuff up in my van.</p>
+		<h3>I am building a home from reclaimed <br>lumber and I want your wood. </h3>
+		<p>The house is in Melbourne, Australia, and my plan is to build as much as possible of the house using modern sustainable housing principles.</p>
 		<hr>
-		<h3>How I&rsquo;ll use your wood:</h3>
+		<h3>Example of how I&rsquo;ll use your wood:</h3>
 		<dl>
 			<dt>1</dt><dd>Planter boxes;</dd>
 			<dt>2</dt><dd>A large dining table;</dd>
@@ -99,7 +96,7 @@
 			<dt>10</dt><dd>Other things I&rsquo;ve not thought of yet.</dd>
 		</dl>
 	<h3>Tell me about your wood!</h3>
-	<p>I will come and get it from you.</p>
+	<p>I can pick up wood from anywhere within driving distance of Melbourne.</p>
 	<p><a target="_blank" class="btn btn-icon" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a></p>
 	<p><a target="_blank" class="btn btn-icon" href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i> @willdayble</a></p>
 
