--- a/htdocs/work.html
+++ b/htdocs/work.html
@@ -76,13 +76,15 @@
 <article id="work">
 	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
 	<a data-nav class="btn btn-next" href="speaking"><i class="ss-right"></i> Speaking</a>
-	<h2>Work</h2>
-	<p>My day job is the <a href="//fitzroyacademy.com">Fitzroy Academy.</a></p>
+	<h2>Work.</h2>
+	<p>Day-to-day, I teach thousands of students around the world about digital, social entrepreneurship and the future at the <a href="//fitzroyacademy.com">Fitzroy Academy.</a></p>
 	<div class="projects">
 		<a href="//fitzroyacademy.com"><img src="design/images/projects/fitzroy.png" alt="Fitzroy Academy"><strong>Fitzroy Academy</strong> <br>Founder</a>
 		<a href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="Squareweave"><strong>Squareweave</strong> <br>Founder</a>
 		<a href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="Grace"><strong>Grace Cafe</strong> <br>Founder</a>
 		<a href="//chuffed.org"><img src="design/images/projects/chuffed.jpg" alt="Chuffed"><strong>Chuffed</strong> <br>Advisory Board</a>
+		<a href="//growstuff.org/"><img src="design/images/projects/growstuff.png" alt="GrowStuff"><strong>GrowStuff</strong><br>Advisory Board</a>				
+
 <!--
 		<a href="//cowalition.com"><img src="design/images/projects/cow.png" alt="Cowalition"><strong>The Cowalition</strong> <br>Founder</a>
 		<a href="//shift.vc"><img src="design/images/projects/shift.png" alt="Promo Bay"><strong>Shift</strong><br>Founder</a>	
@@ -90,7 +92,6 @@
 		<a href="//fitnesseverywhe.re"><img src="design/images/projects/fitness.jpg" alt="Fitness"><strong>Fitness Everywhere</strong> <br>Chair / Advisor</a>
 -->
 
-		<a href="//growstuff.org/"><img src="design/images/projects/growstuff.png" alt="GrowStuff"><strong>GrowStuff</strong><br>Advisory Board</a>				
 
 	</div>
 </article>
