oh boy charlie got a new job he is talented

--- a/htdocs/love.html
+++ b/htdocs/love.html
@@ -90,7 +90,7 @@
 		<cite>
 			<img src="design/images/people/charlie.png" alt="Charlie">
 			- Charlie Gleason,
-			<a class="" href="https://unbound.co.uk/">Head of Product, Unbound</a>
+			<a href="https://heroku.com/" target="_blank">Lead Designer, Heroku</a>
 		</cite>
 	</blockquote>
 </article>
