--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -100,7 +100,7 @@
 		<cite>
 			<img src="design/images/people/charlie.png" alt="Charlie">
 			<a class="role" href="https://twitter.com/superhighfives">- Charlie Gleason</a>, 
-			<a class="" href="https://unbound.co.uk/">Head of Product, Unbound</a>
+			<a class="" href="https://heroku.com/" target="_blank">Lead Designer, Heroku</a>
 		</cite>
 	</blockquote>
 </article>
