booo tighten it up for the agent gogogo

--- a/htdocs/contact.html
+++ b/htdocs/contact.html
@@ -71,11 +71,11 @@
 
 
 
-<aside class="yeah"></aside>
+<aside class="contact"></aside>
 
 <article id="contact">
 	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
-	<h2>Woooo!</h2>
+	<h2>Say hi.</h2>
 	
 	<p>To book me for <a href="speaking">speaking,</a> email is best.</p>
 
