--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -90,8 +90,8 @@
 	<nav>
 	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>	
 	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="love">Testimonials <i class="ss-right"></i></a></p>	  
-	  <p><a data-nav class="btn" href="contact">Contact me <i class="ss-right"></i></a></p>
+		<p><a data-nav class="btn" href="https://medium.com/@willdayble" target="_blank">Writing <i class="ss-windows"></i></a></p>	  	  
+	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>
 	</nav>	
 
 </article>
