--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -79,7 +79,7 @@
 
 	<h2>Keynotes, grace notes.</h2>
 
-	<p>From lecture theatre to auditoriums, I speak on innovation, technology and social impact to help audiences make big decisions about the hard stuff.</p>
+	<p>From lecture theatre to auditoriums, I speak on innovation, tech and impact, to help audiences make big decisions about the hard stuff.</p>
 
 
 	<nav>
@@ -145,28 +145,28 @@
 
 	<h2>Bio</h2>
 	<h3>In brief:</h3>
-	<p>Will made his first dollar selling stolen lemons at age 6. His father taught him to code a year later. He's consistently failed to get a real job,  instead founding multiple companies across digital, education and social enterprise.</p>
-	<p>He delivers keynotes to big companies and starts small ones.</p>
+	<p>Will made his first dollar selling stolen lemons at age 6. His father taught him to code a year later. He&rsquo;s failed to get a real job,  instead founding multiple companies across digital, education and social enterprise.</p>
+	<p>He consults with big companies and starts small ones.</p>
 	<p>In his spare time he doesn't have any.</p>
 
-	<h3>Longer version:</h3>
+	<h3>Less brief:</h3>
 	<p>Will made his first dollar selling stolen lemons at age 6. The margins were incredible.</p>
 
 
 	<p>Will's first successful exit was at 19 years old, from a small IT training organisation. The resulting funds were used to start a mental health charity helping young people in the Melbourne punk scene, a web development company and a record label.</p>
 	<p>All of these ventures eventually failed.</p>
-	<p>Later, Will founded one of Melbourne's <a href="http://squareweave.com.au/" target="_blank">leading digital agencies</a>, a <a href="http://gracefitzroy.com/">cafe</a>, and an online <a href="https://fitzroyacademy.com/" target="_blank">social impact school</a>, all of which seem to be working quite well.</p>
-	<p>Unprofessionally speaking, he's crowdfunded an international DJ tour, built a <a href="http://speakerdiversity.com/" target="_blank">speaker diversity initiative</a>, a charity evaluation startup, worked with <a href="https://torrentfreak.com/pirate-bay-launches-dedicated-promo-bay-to-help-artists-121129/" target="_blank">internet criminals</a> and filled a warehouse loft with nearly 10,000 balloons.</p>
+	<p>Later, Will founded one of Melbourne's <a href="http://squareweave.com.au/" target="_blank">leading digital agencies</a>, a <a href="http://gracefitzroy.com/">cafe</a>, and an online <a href="https://fitzroyacademy.com/" target="_blank">social impact school</a>.</p>
+	<p>Unprofessionally speaking, he's crowdfunded an international DJ tour, built a <a href="http://speakerdiversity.com/" target="_blank">speaker diversity initiative</a>, a charity evaluation startup, worked with <a href="https://torrentfreak.com/pirate-bay-launches-dedicated-promo-bay-to-help-artists-121129/" target="_blank">internet criminals</a> and filled a warehouse loft with 10,000 balloons.</p>
 	<p>Despite a complete lack of qualifications, he's an award winning lecturer, building courses on digital and entrepreneurship at two Australian universities.</p>
 	<p>As, investor advisor and occasional chair, Will sits on the board of a <a href="http://willdayble.com/work">handful</a> of Australian businesses.</p>
 
 	<p>Now, Will flies around the world making flappy noises with his lips to motivate large groups of people, which is a very strange thing to do if you think about it.</p>
-	<p>He is based in Melbourne, with a neuroscientist and two cats.</p>
+	<p>He lives in Melbourne, with a neuroscientist and two cats.</p>
 	<p>In his spare time, Will doesn't have any.</p>
 
 	<hr id="pics">
-	<h3>Hi-res pictures</h3>
-	<p>Click to open hi-res copies in a new window.</p>
+	<h3>Hi-res pictures:</h3>
+	<p>Click to open  in a new window.</p>
 	<p>
 		<a class="biopic" target="_blank" href="design/images/bio/will-dayble-laugh.jpg">
 			<img class="" src="design/images/aside/laff.jpg" alt="will-dayble">
