fix up all this crap

--- a/htdocs/contact.html
+++ b/htdocs/contact.html
@@ -75,7 +75,7 @@
 
 <article id="contact">
 	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
-	<h2>Say hi.</h2>
+	<h2>G&rsquo;day.</h2>
 	
 	<p>To book me for <a href="speaking">speaking,</a> email is best.</p>
 
@@ -86,11 +86,6 @@
 	<p>&nbsp;</p>
 	<p>If you&rsquo;re a founder and want advice, I do office hours:</p>
 	<p><a target="_blank" class="btn btn-icon" href="http://officehours.startupvictoria.com.au/#pt-section-25" target="_blank"><i class="ss-right"></i> Book via Startup Victoria</a></p>	
-</article>
-
-<article class="footer">
-	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Back home</a>
-	<img src="design/images/aside/yeah.gif">
 </article>
 
 
