--- a/htdocs/wood.html
+++ b/htdocs/wood.html
@@ -80,23 +80,24 @@
 		<h2>Got wood?</h2>
 
 		<h3>I am building a home from reclaimed <br>lumber and I want your wood. </h3>
+		<p>Right now I&rsquo;m a terrifically shit amateur carpenter learning about joinery, sustainability and dwelling design.</p>
 		<p>The house is in Melbourne, Australia, and my plan is to build as much as possible of the house using modern sustainable housing principles.</p>
 		<hr>
 		<h3>Example of how I&rsquo;ll use your wood:</h3>
 		<dl>
 			<dt>1</dt><dd>Planter boxes;</dd>
-			<dt>2</dt><dd>A large dining table;</dd>
+			<dt>2</dt><dd>A dining table;</dd>
 			<dt>3</dt><dd>Wine, book and video game storage;</dd>
 			<dt>4</dt><dd>Kitchen counters and shelves;</dd>
-			<dt>5</dt><dd>Window frames;</dd>
-			<dt>6</dt><dd>Structural support;</dd>
-			<dt>7</dt><dd>A couple of staircases;</dd>			
+			<dt>5</dt><dd>Window frames and joinery;</dd>
+			<dt>6</dt><dd>Structural stuff;</dd>
+			<dt>7</dt><dd>A staircase or two;</dd>			
 			<dt>8</dt><dd>Great big bookshelf with a slidey ladder;</dd>						
-			<dt>8</dt><dd>Rooftop garden decking;</dd>						
+			<dt>8</dt><dd>Green roof stuff, decking, etc;</dd>						
 			<dt>10</dt><dd>Other things I&rsquo;ve not thought of yet.</dd>
 		</dl>
 	<h3>Tell me about your wood!</h3>
-	<p>I can pick up wood from anywhere within driving distance of Melbourne.</p>
+	<p>I can pick up anything, within driving distance of Melbourne.</p>
 	<p><a target="_blank" class="btn btn-icon" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a></p>
 	<p><a target="_blank" class="btn btn-icon" href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i> @willdayble</a></p>
 
