--- a/htdocs/work.html
+++ b/htdocs/work.html
@@ -76,8 +76,9 @@
 <article id="work">
 	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
 	<a data-nav class="btn btn-next" href="speaking"><i class="ss-right"></i> Speaking</a>
-	<h2>Work.</h2>
-	<p>Day-to-day, I teach thousands of students around the world about digital, social entrepreneurship and the future at the <a href="//fitzroyacademy.com">Fitzroy Academy.</a></p>
+	<h2>Floundering.</h2>
+	<p>Day-to-day, I teach thousands of students around the world about the internet and social entrepreneurship via the <a href="//fitzroyacademy.com">Fitzroy Academy.</a></p>
+	<p>These companies have (so far) survived my influence:</p>
 
 	<div class="projects">
 		<a href="//fitzroyacademy.com"><img src="design/images/projects/fitzroy.png" alt="Fitzroy Academy"><strong>Fitzroy Academy</strong> <br>Founder</a>
