--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -84,21 +84,29 @@
 
 
 <article id="home">	
+	
 	<h2>Will Dayble.</h2>
-	<h3>Award winning lecturer, <br><a href="speaking">speaker</a>, &amp; <a href="work">startup founder.</a></h3>
-	<p>&nbsp;</p>
+	<h3>Award winning lecturer, speaker, &amp; founder.</h3>
+
 	<nav>
 	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>	
-	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
-		<p><a data-nav class="btn" href="https://medium.com/@willdayble" target="_blank">Writing <i class="ss-windows"></i></a></p>	  	  
-	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="work">Floundering <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="wood">Got wood? <i class="ss-right"></i></a></p>	
+	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>	   
 	</nav>	
+
+<!--
+	<p>&nbsp;</p>
+	<p>(Also, definitely <a href="nope" class="nope">not a futurist.</a>)
+
+
+-->
 
 </article>
 
 <article class="footer">
 	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Get in touch</a>
-	<img src="design/images/aside/yeah.gif" alt="renovation man">
+	<img src="design/images/aside/phone.gif" alt="renovation man">
 </article>
 
 <!-- <script src="design/vendor/puretabs-master/puretabs.min.js"></script> -->
