language language language i am bad at writing stuffs

--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -163,7 +163,7 @@
 		
 		<div class="keydesc">
 			<a href="#contact" class="panel"><i class="ss-meeting"></i> <strong>Keynote #1</strong><em>Bookings</em></a>			
-			<h3>Purposeful models for impact:</h3>
+			<h3>Models for impact:</h3>
 			<p>An expansive 101 on the impact space, and what leading practitioners from the edge can teach us about scale, impact and growth.</p>
 			<dl class="detail">
 				<dt><i class="ss-info"></i></dt><dd><strong>Format:</strong> 45 / 90 minute keynote.</dd>	
@@ -175,7 +175,7 @@
 		<div class="keydesc">
 			<a href="#contact" class="panel"><i class="ss-meeting"></i> <strong>Keynote #2</strong><em>Bookings</em></a>			
 			<h3>Purpose in action:</h3>
-			<p>A back-down-to-earth conversation about the emotion and practice of change-making, to help audiences feel willing and capable to make change in their own lives and practice.</p>
+			<p>A down-to-earth conversation about the emotion and practice of change-making, to help audiences feel willing and capable to make change in their own lives and practice.</p>
 			<dl class="detail">
 				<dt><i class="ss-info"></i></dt><dd><strong>Format:</strong> 45 / 90 minute keynote.</dd>	
 				<dt><i class="ss-usergroup"></i></dt><dd><strong>Audience:</strong> The whole organisation.</dd>
