--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -196,8 +196,8 @@
 		<h2>Digital transformation.</h2>
 		
 		<div class="keydesc">
-			<a href="#contact" class="panel"><i class="ss-meeting"></i> <strong>Keynote #1<i class="ss-right"></i></strong><em>Bookings</em></a>
-			<h3>The truth about disruption:</h3>
+			<a href="#contact" class="panel"><i class="ss-meeting"></i> <strong>Keynote #1</strong><em>Bookings</em></a>
+			<h3>The truth about transformation:</h3>
 			<p>A myth-busting, stage-setting, arse-kicking deep dive into digital transformation, disruption and the truth beyond the buzzwords.</p>
 			<dl class="detail">
 				<dt><i class="ss-info"></i></dt><dd><strong>Format:</strong> 45 / 90 minute keynote.</dd>	
@@ -265,7 +265,7 @@
 			<h2>
 					<img src="design/images/headers/molotov.png" alt="banksy" width="180">
 				Masterclasses.</h2>
-			<p>Half / full day intensives that break past the standard.<br>The molotov that helps people to take note and create action.</p>
+			<p>Intimate experiences to push us past normal,<br> a delicious molotov blend of thought and action.</p>
 		</div>
 	</section>
 </article>
@@ -349,7 +349,7 @@
 
 <article class="alt">
 	<blockquote>
-		<p><span class="lquo">&ldquo;</span>Will makes tech &amp; innovation accessible<br> &amp; meaningful to leadership.&rdquo;</p>
+		<p><span class="lquo">&ldquo;</span>Will makes purpose &amp; transformation<br> accessible to modern leaders.&rdquo;</p>
 		<cite>
 			<img src="design/images/people/jason.png" alt="Jason">
 			- Dr. Jason Fox, 
@@ -475,6 +475,9 @@
 </article>		 
 
 <article id="contact" class="fullheight">
+	
+	<a data-nav class="btn btn-back" href="#"><i class="ss-left"></i> Back to top</a>	
+	
 	<h2>Book me.</h2>
 	
 	<p>Email is usually best.</p>
